common: hostNetwork and dnsPolicy

--- a/charts/common/values.yaml
+++ b/charts/common/values.yaml
@@ -43,6 +43,8 @@ global:
   commonLabels: {}
   podAnnotations: {}
   podManagementPolicy: Parallel
+  hostNetwork: ""
+  dnsPolicy: ""
   podSecurityContext:
     enabled: false
   #    fsGroup: 1001
