--- a/charts/common/values.yaml
+++ b/charts/common/values.yaml
@@ -44,6 +44,7 @@ global:
   podAnnotations: {}
   podManagementPolicy: Parallel
   hostNetwork: ""
+  minReadySeconds: ""
   dnsPolicy: ""
   podSecurityContext:
     enabled: false
