--- a/charts/common/templates/deployment.yaml
+++ b/charts/common/templates/deployment.yaml
@@ -15,6 +15,9 @@ metadata:
     {{- tpl ( $annotations | toYaml ) $ | nindent 4 }}
   {{- end }}
 spec:
+  {{- if .Values.global.minReadySeconds }}
+  minReadySeconds: {{ .Values.global.minReadySeconds }}
+  {{- end }}
   selector:
     matchLabels: {{- include "common.matchLabels" . | nindent 6 }}
   replicas: {{ .Values.global.deployment.replicaCount }}
